--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -4,7 +4,7 @@
       <div class="cards">
         <% @cocktails.each do |cocktail| %>
           <%= link_to cocktail_path(cocktail) do  %>
-            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+            <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://source.unsplash.com/featured/?<%= cocktail.name %>')">
               <%= cocktail.name %>
             </div>
           <% end %>
