--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -14,4 +14,11 @@
       <% end %>
     </div>
   </div>
+  <div class="row mt-3">
+    <div class="col">
+      <%= link_to cocktail_path(@cocktail) do %>
+        <i class="fas fa-undo"></i> Back to <%= @cocktail.name %>
+      <% end %>
+    </div>
+  </div>
 </div>
