--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,16 @@
   </head>
 
   <body>
-    <%= render "components/navbar" %>
-    <%= yield %>
-    <% unless current_page?(cocktails_path) %>
-      <%= render "components/footer" %>
+    <% unless current_page?(root_path) %>
+      <%= render "components/navbar" %>
+    <% end %>
+    <% if !current_page?(root_path) %>
+      <div class="content-page">
+        <%= yield %>
+        <%= render "components/footer" %>
+      </div>
+    <% else %>
+      <%= yield %>
     <% end %>
   </body>
 </html>
