--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -5,7 +5,7 @@
         <% @cocktails.each do |cocktail| %>
           <%= link_to cocktail_path(cocktail) do  %>
             <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://source.unsplash.com/featured/?<%= cocktail.name %>')">
-              <%= cocktail.name %>
+              <%= cocktail.name.capitalize %>
             </div>
           <% end %>
         <% end %>
