--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,21 +1,24 @@
 <div class="container mt-3">
   <div class="row">
     <div class="col d-flex align-items-center">
-      <h1><%= @cocktail.name %></h1>
-      <%= link_to edit_cocktail_path(@cocktail), class: "ml-3" do %>
-        <i class="fas fa-edit"></i>
-      <% end %>
-      <%= link_to cocktail_path(@cocktail), method: :delete, data: {confirm: 'Are you sure?'}, class: "ml-3" do %>
-        <i class="fas fa-trash-alt"></i>
-      <% end %>
       <!-- <div>
         <%#= link_to "Edit cocktail", edit_cocktail_path(@cocktail), class: "btn btn-secondary" %>
         <%#= link_to "Add dose", new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %>
       </div> -->
     </div>
   </div>
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://source.unsplash.com/featured/?<%= @cocktail.name %>')">
+    <h1><%= @cocktail.name.capitalize %></h1>
+    <%= link_to edit_cocktail_path(@cocktail), class: "ml-3" do %>
+      <i class="fas fa-edit"></i>
+    <% end %>
+    <%= link_to cocktail_path(@cocktail), method: :delete, data: {confirm: 'Are you sure?'}, class: "ml-3" do %>
+      <i class="fas fa-trash-alt"></i>
+    <% end %>
+  </div>
   <div class="row">
     <div class="col">
+      <h2 class="mt-3">Composition :</h2>
       <ul class="cocktail-list-dose">
       <% @cocktail.doses.each do |dose| %>
         <li><%= dose.amount %> <%= dose.description %> of <%= dose.ingredient.name %></li>
