--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
-        <%= link_to "Cocktail", cocktails_path, class: "nav-link" %>
+        <%= link_to "Cocktails", cocktails_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
         <%= link_to "Ingredients", ingredients_path, class: "nav-link" %>
