--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <div class="row">
     <div class="col">
-      <h1>Add a dose to <%= @cocktail.name %></h1>
+      <h1>Add a dose to <%= @cocktail.name.capitalize %></h1>
     </div>
   </div>
   <div class="row">
@@ -17,7 +17,7 @@
   <div class="row mt-3">
     <div class="col">
       <%= link_to cocktail_path(@cocktail) do %>
-        <i class="fas fa-undo"></i> Back to <%= @cocktail.name %>
+        <i class="fas fa-undo"></i> Back to <%= @cocktail.name.capitalize %>
       <% end %>
     </div>
   </div>
