--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -7,18 +7,24 @@
       </div> -->
     </div>
   </div>
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://source.unsplash.com/featured/?<%= @cocktail.name %>')">
-    <h1><%= @cocktail.name.capitalize %></h1>
-    <%= link_to edit_cocktail_path(@cocktail), class: "ml-3" do %>
-      <i class="fas fa-edit"></i>
+  <div class="row content-box">
+    <% if !@cocktail.photo.attached? %>
+      <div class="col-5 cocktail-image" style="background-image: url('https://source.unsplash.com/featured/?<%= @cocktail.name %>')">
+    <% else %>
+      <div class="col-5 cocktail-image" style="background-image: url('<%= cl_image_path @cocktail.photo.key, height: 300, width: 400 %>')">
     <% end %>
-    <%= link_to cocktail_path(@cocktail), method: :delete, data: {confirm: 'Are you sure?'}, class: "ml-3" do %>
-      <i class="fas fa-trash-alt"></i>
-    <% end %>
-  </div>
-  <div class="row">
-    <div class="col">
-      <h2 class="mt-3">Composition :</h2>
+    </div>
+    <div class="col-7 p-3">
+      <div class="cocktail-title d-flex align-items-center">
+        <h1><%= @cocktail.name.capitalize %></h1>
+        <%= link_to edit_cocktail_path(@cocktail), class: "ml-3" do %>
+          <i class="fas fa-edit"></i>
+        <% end %>
+        <%= link_to cocktail_path(@cocktail), method: :delete, data: {confirm: 'Are you sure?'}, class: "ml-3" do %>
+          <i class="fas fa-trash-alt"></i>
+        <% end %>
+      </div>
+      <h3 class="mt-3">Composition :</h3>
       <ul class="cocktail-list-dose">
       <% @cocktail.doses.each do |dose| %>
         <li><%= dose.amount %> <%= dose.description %> of <%= dose.ingredient.name %></li>
