--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-3">
+<div class="container mt-3 content-box px-5 py-4">
   <div class="row">
     <div class="col d-flex justify-content-between align-items-center">
       <h1>List of all ingredients</h1>
